--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@types/react-dom": "^18",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
+        "autoprefixer": "^10.4.17",
         "eslint": "^9.0.0",
         "eslint-config-next": "16.1.0"
     }
