--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "gsap": "^3.14.2",
+        "next": "16.1.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "next": "16.1.0"
+        "react-dom": "^18.2.0"
     },
     "devDependencies": {
-        "typescript": "^5",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
-        "postcss": "^8",
-        "tailwindcss": "^3.4.1",
         "autoprefixer": "^10.4.17",
         "eslint": "^9.0.0",
-        "eslint-config-next": "16.1.0"
+        "eslint-config-next": "16.1.0",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
     }
 }
